main.css
:root {
  --background-color: #ffffff;
  --text-color: #000000;
}

.main_content {
    background-color: var(--background-color);
    color: var(--text-color);
}

.mrows-content {
    background-color: var(--background-color);
    color: var(--text-color);
}

.mcpdt-content {
    background-color: var(--background-color);
    color: var(--text-color);
}

header {
    /*background: #800000;*/
    background-image: linear-gradient(to right, #008C45, #F4F5F0, #CD212A);
    margin-bottom: .5%;
}

footer {
    background: #c0c0c0;
}

li {
    list-style-type: square;
}

.tooltip {
  position: relative;
  cursor: pointer;
  font-size: 1em;
}

.tooltip .tooltiptext {
  visibility: hidden;
  background-color: #000000;
  color: white;
  text-align: center;
  padding: 5px;
  border-radius: 4px;
  position: absolute;
  z-index: 1;
  top: 100%;
  left: 50%;
  transform: translateX(-50%);
  width: 100%;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
}

.header {
  display: flex;
  justify-content: space-between;
}

.left, .right, .center {
  padding: 10px;
}

.left {
  text-align: left;
  color: white;
}

.center {
  margin: auto;
}

.right {
  text-align: right;
  color: white;
}

.none {
    display: none;
}

.margin-top-negative-one {
    margin-top: -1%;
}

.home-button {
    float: right;
    margin-right: .5%;
}

.home-button:hover {
    cursor: pointer;
}

.footer_text {
    padding: 0px 5%;
    font-size: 1em;
}

.center_text {
    text-align: center;
}

.app_info_container {
    display:flex;
}

.app_info {
    flex: 2;
}

.app_info_tech {
    flex: 1;
    margin-right: -20%;
    margin-top: -.85%;
}

.app_info_tech_dl {
    margin-left: 2%;
}

.app_info_tech_dl_header {
    font-weight: bold;
    font-size: 1.3em;
}

.info_header {
    background-color: #f0f0f0;
    cursor: pointer;
    width: 80%;
    margin-left: 10%;
    margin-top: .5%;
}

.info_header:hover {
    background-color: #c0c0c0;
}

.info_detail {
    width: 75%;
    margin-left: 12.5%;
    display: none;
}

.section-dl {
    margin-top: -1.25%;
}

.expandable-article {
    display: flex; /* Create a row layout */
    flex-wrap: wrap; /* Allow items to wrap to new rows */
}

.expandable-article .truncated-text {
    width: 17.25%;
    text-align: center;
    border: 0.1em solid #000000;
    cursor: pointer;
    padding: 0 2.5%;
    margin: auto;
    margin-top: .5%;
    margin-bottom: .5%;
}

.expandable-article .truncated-text:hover {
    background-color: #c0c0c0;
}

.expandable-article .full-text {
    display: none;
}

.expandable-article .full-text {
    display: none; /* Hide the full text by default */
    width: 75%;
    text-align: left;
    margin: auto;
    margin-top: .5%;
    margin-bottom: .5%;
}

.selected-partial {
    background-color: #c0c0c0;
}

.expandable-question .full-text {
    display: none;
}

.expandable-question.expanded .full-text {
    display: block;
    width: 75%;
    text-align: center;
    margin: auto;
}

.expandable-question.expanded .truncated-text {
    display: none;
}

.contact_info_p {
    margin-bottom: 0px;
}

.social_info_p {
    margin-top: 0px;
    font-size: 1em;
}

.header_text {
    font-size: 2.75em;
}

.legend_text {
    font-size: 1.5em;
    font-weight: bold;
}

.ul-header {
    font-weight: bold;
    font-size: 1.2em;
    list-style: none;
}

.ul-header-link:hover {
    cursor: pointer;
    background-color: #c0c0c0;
}

.accom_date_range {
    font-weight: normal;
    font-style: italic;
    font-size: .75em;
}

.about-me {
    font-size: 1em;
}

.about-me-header {
    display: flex;
    justify-content: space-around;
    flex-wrap: nowrap;
    margin-bottom: -2.35%;
}

.about-me-header-text {
    margin-top: 2.75%;
}

.about-me-pic_left, .about-me-pic_right {
    max-width: 5%;
    max-height: 5%;
    border: 2.5px solid #000000;
}
.about-me-pic_left {
    margin-left: 37%;
}

.about-me-pic_right {
    margin-right: 37%;
}

.references {
    font-size: 1em;
}

.references dt {
    font-size: 1.1em;
    font-weight: bold;
    margin-left: .5%;
}

.references dd {
    margin-bottom: .5%;
}

.logo {
    margin-left: 97%;
}



/* dark mode styles */
.dark-mode {
    --background-color: #000000;
    --text-color: #ffffff;
}

.main_content.dark-mode h3 {
    color: #c0c0c0;
}

.main_content.dark-mode hr {
    border-color: #c0c0c0;
}

.main_content.dark-mode .info_header {
    background-color: #808080;
}

.main_content.dark-mode .info_header:hover {
    background-color: #c0c0c0;
}

.main_content.dark-mode .expandable-article .truncated-text {
    border-color: #ffffff;
}

.main_content.dark-mode .expandable-article .truncated-text:hover {
    background-color: #c0c0c0;
}

.dark-mode .selected-partial {
    background-color: #808080;
}

.main_content.dark-mode .about-me-pic_left {
    border-color: #c0c0c0;
}

.main_content.dark-mode .about-me-pic_right {
    border-color: #c0c0c0;
}


/* crimson and cream styles */
.crimson-cream {
    --background-color: #dc143c;
    --text-color: #fffdd0;
}

.main_content.crimson-cream h3 {
    color: #fffdd0;
}

.main_content.crimson-cream hr {
    border-color: #fffdd0;
}

.main_content.crimson-cream .info_header {
    background-color: #808080;
}

.main_content.crimson-cream .info_header:hover {
    background-color: #c0c0c0;
}

.main_content.crimson-cream .expandable-article .truncated-text {
    border-color: #fffdd0;
}

.main_content.crimson-cream .expandable-article .truncated-text:hover {
    background-color: #c0c0c0;
}

.crimson-cream .selected-partial {
    background-color: #808080;
}

.main_content.crimson-cream .about-me-pic_left {
    border-color: #fffdd0;
}

.main_content.crimson-cream .about-me-pic_right {
    border-color: #fffdd0;
}

